# simplysign

./: .gitignore  prog.py  pyproject.toml
.github/workflows/: test.yml
scripts/: create_exe.py  hello.py
